2005-06-15  Albert Chu  <chu11@llnl.gov>

	* Fixed static compilation bugs.

	* Remove hostlist files.

	* New libmarshall library.  Rework libcerebro and cerebrod around
	new lib.

	* Various cleanup fixes.

	* Implemented and use new marshall wrapper functions.
	
2005-06-14  Albert Chu  <chu11@llnl.gov>

	* Added finishing touches to monitor support in cerebrod.

	* Bug fixes to get bootlog monitoring to work.

	* cerebro.spec.in, Makefile, autoconf: Varoius updates for new
	appropriate packages and builds.
	
2005-06-13  Albert Chu  <chu11@llnl.gov>

	* Rename monitor module metric module in preparation for changes.

	* tagged pre-monitor-module-2

	* Added monitor module support.

	* Added bootlog monitor module.

	* Added monitor module support to libcerebro.

	* Begin adding monitor support in cerebrod.
	
2005-06-10  Albert Chu  <chu11@llnl.gov>

	* Various code cleanup.

2005-06-09  Albert Chu  <chu11@llnl.gov>

	* Added support for CEREBRO_METRIC_FLAGS_NONE_IF_DOWN flag.

	* tagged pre-monitor-module-1

	* Various code cleanup
	
	* Added new monitoring modules support.

	* Added boottime monitor module.

	* Added monitor module support to libcerebro.

	* Use boottime module rather than hardcoded boottime in cerebrod.

2005-06-08  Albert Chu  <chu11@llnl.gov>

	* Add support for RAW datatype.

	* Documented and made metric defaults available via cerebro.h.

	* Various documentation fixes, bug fixes, and code cleanup.
	
	* tagged pre-libcerebro-module-rework-2

	* Re-worked module library in libcerebro in anticipation of
	monitoring modules.

2005-06-07  Albert Chu  <chu11@llnl.gov>

	* Removed hard defined maximum metric count.  Added
	cerebrod_metric_max configuration option.

	* Removed hard defined packet buffer for situations where the
	received/sent packet size is not known.

	* Added get configuration routines to libcerebro.

	* Documented and made flags and value types available via
	cerebro.h.
	
	* Various bug fixes.

	* Various code cleanup.
