@@ -16,6 +16,7 @@ Cleanup
    - need structure to hold node locks without metric info?
 - debug/lock race issue with cerebro_error functions??
    - calling debug stuff even if debug_output is locked in cerebrod
+   - pointless, should only be for debug output, nothing more, nothing less
 - metric modules can provide multiple metrics??
 - more statically compiled in libraries to reduce virt/res size?
   - wrappers lib
