@@ -1,3 +1,7 @@
+2005-06-16  Albert Chu  <chu11@llnl.gov>
+
+	* Fixed up locking issues.
+	
 2005-06-15  Albert Chu  <chu11@llnl.gov>
 
 	* Fixed static compilation bugs.
